added an acknowledge.

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-﻿Chrome extension for synchronizing selected tabs' scroll.
+﻿Chrome extension for synchronizing selected tabs' scroll on different windows.
+
+Acknowledgement
+- Mike Kormendy (https://github.com/mkormendy) gives clean designed icons.
+
